--- a/remote/package.json
+++ b/remote/package.json
@@ -15,6 +15,7 @@
     "fluent": "^0.3.0",
     "fluent-intl-polyfill": "0.0.1",
     "geolib": "^2.0.22",
+    "libxmljs": "^0.18.4",
     "node-fetch": "^1.6.3"
   },
   "devDependencies": {
