--- a/scripts/package.json
+++ b/scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rowerynka-scripts",
-  "private": "true",
+  "private": true,
   "version": "0.0.1",
   "description": "Scripts for Rowerynka",
   "repository": {
