--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,6 +2,8 @@ version: "3"
 services:
   redis:
     image: redis:alpine
+    volumes:
+      - redis_data:/data
   rowerynka:
     build: ../remote/
     image: stasmade/rowerynka
@@ -11,3 +13,5 @@ services:
       - ./rowerynka.env
     ports:
       - 59001:59001
+volumes:
+  redis_data:
