--- a/remote/Dockerfile
+++ b/remote/Dockerfile
@@ -10,7 +10,7 @@ RUN apk --no-cache add --virtual gyp-deps \
     && apk del gyp-deps
 
 ENV MESSENGER_API_URL="https://graph.facebook.com/v2.6" \
-    NEXTBIKE_API_URL="https://nextbike.net/maps/nextbike-live.xml" \
+    NEXTBIKE_API_URL="https://api.nextbike.net/maps/nextbike-live.xml" \
     MAPS_STATIC_URL="https://maps.googleapis.com/maps/api/staticmap" \
     MAPS_PLACES_URL="https://maps.googleapis.com/maps/api/place" \
     BING_STATIC_URL="https://dev.virtualearth.net/REST/v1/Imagery/Map" \
