Update to Graph API 3.0

--- a/docker/docker-compose.override.yml
+++ b/docker/docker-compose.override.yml
@@ -3,6 +3,6 @@ services:
   rowerynka:
     build: ../remote/
     env_file:
-      - ./rowerynka.env
+      - ./development.env
     ports:
       - 59001:59001
