--- a/remote/package.json
+++ b/remote/package.json
@@ -10,17 +10,17 @@
   "author": "Staś Małolepszy <stas@duzodobrze.pl>",
   "license": "AGPL-3.0",
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "express": "^4.16.3",
-    "fluent": "^0.6.4",
+    "body-parser": "1.18.3",
+    "express": "4.16.3",
+    "fluent": "0.6.4",
     "fluent-intl-polyfill": "0.0.1",
-    "geolib": "^2.0.24",
-    "libxmljs": "^0.19.0",
-    "node-fetch": "^2.1.2",
-    "redis": "^2.8.0"
+    "geolib": "2.0.24",
+    "libxmljs": "0.19.0",
+    "node-fetch": "2.1.2",
+    "redis": "2.8.0"
   },
   "devDependencies": {
-    "eslint": "^4.19.1"
+    "eslint": "4.19.1"
   },
   "engines": {
     "node": "^8.9.0"
