--- a/remote/package.json
+++ b/remote/package.json
@@ -14,14 +14,15 @@
     "express": "4.16.3",
     "fluent": "0.8.0",
     "geolib": "2.0.24",
-    "libxmljs": "0.19.5",
+    "libxmljs": "0.19.7",
     "node-fetch": "2.1.2",
     "redis": "2.8.0"
   },
   "devDependencies": {
     "eslint": "5.6.0"
   },
+  "type": "module",
   "engines": {
-    "node": "^8.9.0"
+    "node": "^12.16.0"
   }
 }
