--- a/remote/package.json
+++ b/remote/package.json
@@ -10,9 +10,9 @@
   "author": "Staś Małolepszy <stas@duzodobrze.pl>",
   "license": "AGPL-3.0",
   "dependencies": {
+    "@fluent/bundle": "0.15.0",
     "body-parser": "1.19.0",
     "express": "4.17.1",
-    "fluent": "0.8.0",
     "geolib": "2.0.24",
     "libxmljs": "0.19.7",
     "node-fetch": "2.6.0",
