Update cities.json as of March 8, 2020

--- a/scripts/package.json
+++ b/scripts/package.json
@@ -10,8 +10,8 @@
   "author": "Staś Małolepszy <stas@duzodobrze.pl>",
   "license": "AGPL-3.0",
   "dependencies": {
-    "libxmljs": "^0.18.7",
-    "node-fetch": "^1.6.3"
+    "libxmljs": "0.19.7",
+    "node-fetch": "2.6.0"
   },
   "devDependencies": {
     "eslint": "^3.9.1"
